--- a/runs/bings1520.yaml
+++ b/runs/bings1520.yaml
@@ -157,6 +157,7 @@ events:
   - {frame: [357936, 359327], label: Jitan Sa'mi Shrine, type: Shrine, segments: [[358237, Enter], [359090, Main], [359327, Leave]]}
   - {frame: [363697, 363734], label: N19, type: Korok Seed}
   - {frame: [365772, 365809], label: N17, type: Korok Seed}
+  - {frame: [367260, 367893], label: Memory 11, type: Memory}
   - {frame: [368894, 368930], label: N15, type: Korok Seed}
   - {frame: [369555, 369594], label: N16, type: Korok Seed}
   - {frame: [370215, 371735], label: Dow Na'eh Shrine, type: Shrine, segments: [[370485, Enter], [371522, Main], [371735, Leave]]}
@@ -214,6 +215,7 @@ events:
   - {frame: [463920, 463959], label: E27, type: Korok Seed}
   - {frame: [465364, 465400], label: E26, type: Korok Seed}
   - {frame: [466416, 466453], label: E31, type: Korok Seed}
+  - {frame: [466868, 467504], label: Memory 05, type: Memory}
   - {frame: [468493, 468531], label: E24, type: Korok Seed}
   - {frame: [469045, 469083], label: E25, type: Korok Seed}
   - {frame: [472493, 472530], label: E19, type: Korok Seed}
@@ -277,6 +279,7 @@ events:
   - {frame: [555588, 555626], label: A22, type: Korok Seed}
   - {frame: [556309, 556346], label: A18, type: Korok Seed}
   - {frame: [556868, 556908], label: A21, type: Korok Seed}
+  - {frame: [557404, 558033], label: Memory 09, type: Memory}
   - {frame: [559516, 561503], label: Tutsuwa Nima Shrine, type: Shrine, segments: [[559781, Enter], [561278, Main], [561503, Leave]]}
   - {frame: [562345, 562383], label: A26, type: Korok Seed}
   - {frame: [563262, 563298], label: A20, type: Korok Seed}
@@ -313,6 +316,7 @@ events:
   - {frame: [671872, 674022], label: Saas Ko'sah Shrine, type: Shrine, segments: [[672142, Enter], [673764, Main], [674022, Leave]]}
   - {frame: [675491, 675528], label: X01, type: Korok Seed}
   - {frame: [676192, 676230], label: X04, type: Korok Seed}
+  - {frame: [677516, 678156], label: Memory 08, type: Memory}
   - {frame: [678705, 678744], label: X09, type: Korok Seed}
   - {frame: [679679, 679715], label: X14, type: Korok Seed}
   - {frame: [680252, 680289], label: X17, type: Korok Seed}
@@ -348,6 +352,7 @@ events:
   - {frame: [706442, 706479], label: R19, type: Korok Seed}
   - {frame: [706816, 706852], label: R16, type: Korok Seed}
   - {frame: [707919, 707956], label: R10, type: Korok Seed}
+  - {frame: [708800, 709437], label: Memory 06, type: Memory}
   - {frame: [710143, 710180], label: R07, type: Korok Seed}
   - {frame: [711204, 711242], label: K29, type: Korok Seed}
   - {frame: [712370, 712406], label: K27, type: Korok Seed}
@@ -415,6 +420,7 @@ events:
   - {frame: [778929, 778969], label: C83, type: Korok Seed}
   - {frame: [779989, 780027], label: C76, type: Korok Seed}
   - {frame: [780460, 780497], label: C75, type: Korok Seed}
+  - {frame: [781720, 782358], label: Memory 02, type: Memory}
   - {frame: [783260, 783297], label: C69, type: Korok Seed}
   - {frame: [783989, 784025], label: C63, type: Korok Seed}
   - {frame: [784544, 784580], label: C62, type: Korok Seed}
@@ -425,6 +431,7 @@ events:
   - {frame: [790062, 790098], label: C58, type: Korok Seed}
   - {frame: [790794, 790832], label: C59, type: Korok Seed}
   - {frame: [791244, 791282], label: R74, type: Korok Seed}
+  - {frame: [792086, 792724], label: Memory 10, type: Memory}
   - {frame: [794453, 794490], label: R79, type: Korok Seed}
   - {frame: [799131, 799170], label: C78, type: Korok Seed}
   - {frame: [799747, 799782], label: C72, type: Korok Seed}
@@ -443,6 +450,7 @@ events:
   - {frame: [826660, 826698], label: G32, type: Korok Seed}
   - {frame: [827189, 827227], label: W10, type: Korok Seed}
   - {frame: [828712, 828749], label: G35, type: Korok Seed}
+  - {frame: [830416, 831053], label: Memory 04, type: Memory}
   - {frame: [833786, 833822], label: W17, type: Korok Seed}
   - {frame: [835958, 838124], label: Sasa Kai Shrine, type: Shrine, segments: [[836254, Enter], [837898, Main], [838124, Leave]]}
   - {frame: [839286, 839326], label: G31, type: Korok Seed}
@@ -636,6 +644,7 @@ events:
   - {frame: [1064961, 1064998], label: L02, type: Korok Seed}
   - {frame: [1065825, 1065863], label: L01, type: Korok Seed}
   - {frame: [1066430, 1066466], label: L04, type: Korok Seed}
+  - {frame: [1067192, 1067822], label: Memory 07, type: Memory}
   - {frame: [1068276, 1068312], label: D45, type: Korok Seed}
   - {frame: [1069175, 1069211], label: D35, type: Korok Seed}
   - {frame: [1070084, 1070121], label: D36, type: Korok Seed}
@@ -767,6 +776,7 @@ events:
   - {frame: [1238538, 1238576], label: Z29, type: Korok Seed}
   - {frame: [1239324, 1239360], label: C46, type: Korok Seed}
   - {frame: [1240214, 1240253], label: C51, type: Korok Seed}
+  - {frame: [1241373, 1242011], label: Memory 12, type: Memory}
   - {frame: [1243468, 1243507], label: C56, type: Korok Seed}
   - {frame: [1244970, 1245008], label: C50, type: Korok Seed}
   - {frame: [1245604, 1245641], label: C44, type: Korok Seed}
@@ -798,6 +808,7 @@ events:
   - {frame: [1271212, 1271248], label: C28, type: Korok Seed}
   - {frame: [1272048, 1272084], label: C33, type: Korok Seed}
   - {frame: [1272553, 1272590], label: C35, type: Korok Seed}
+  - {frame: [1273066, 1273704], label: Memory 01, type: Memory}
   - {frame: [1274638, 1274675], label: C42, type: Korok Seed}
   - {frame: [1275002, 1275039], label: C43, type: Korok Seed}
   - {frame: [1276046, 1276083], label: C40, type: Korok Seed}
@@ -848,6 +859,7 @@ events:
   - {frame: [1310471, 1310514], label: T24, type: Korok Seed}
   - {frame: [1313634, 1313672], label: T33, type: Korok Seed}
   - {frame: [1314156, 1316275], label: Tena Ko'sah Shrine, type: Shrine, segments: [[1314424, Enter], [1316038, Main], [1316275, Leave]]}
+  - {frame: [1316806, 1317447], label: Memory 03, type: Memory}
   - {frame: [1318192, 1318227], label: T35, type: Korok Seed}
   - {frame: [1319141, 1319178], label: T37, type: Korok Seed}
   - {frame: [1320637, 1320673], label: T31, type: Korok Seed}
