--- a/runs/ikurapan1503.yaml
+++ b/runs/ikurapan1503.yaml
@@ -59,6 +59,7 @@ events:
   - {frame: [168328, 168968], label: Mogg Latan Shrine, type: Warp}
   - {frame: [170683, 170691], label: Tabantha Tower, type: Tower Activation}
   - {frame: [175968, 176003], label: T02, type: Korok Seed}
+  - {frame: [181722, 188995], label: Vah Medoh, type: Medoh, segments: [[183540, T1], [183988, T2], [184475, T3], [185415, T4], [186167, T5], [186828, To Blight], [187505, Blight], [188995, Leave]]}
   - {frame: [199740, 199776], label: T17, type: Korok Seed}
   - {frame: [201657, 203421], label: Sha Warvo Shrine, type: Shrine, segments: [[201951, Enter], [203155, Main], [203421, Leave]]}
   - {frame: [204625, 204662], label: H54, type: Korok Seed}
@@ -106,6 +107,7 @@ events:
   - {frame: [259182, 259218], label: W28, type: Korok Seed}
   - {frame: [259290, 259851], label: Kuh Takkar Shrine, type: Warp}
   - {frame: [266742, 267337], label: Daqo Chisay Shrine, type: Warp}
+  - {frame: [275509, 284966], label: Vah Naboris, type: Naboris, segments: [[277674, T1], [278431, T2], [278917, T3], [279405, T4], [281690, T5], [282421, To Blight], [283435, Blight], [284966, Leave]]}
   - {frame: [292392, 294426], label: Dako Tah Shrine, type: Shrine, segments: [[292656, Enter], [294201, Main], [294426, Leave]]}
   - {frame: [295354, 295389], label: G34, type: Korok Seed}
   - {frame: [296266, 296301], label: W19, type: Korok Seed}
@@ -180,6 +182,7 @@ events:
   - {frame: [386120, 387688], label: Ne'ez Yohma Shrine, type: Shrine, segments: [[386417, Enter], [387448, Main], [387688, Leave]]}
   - {frame: [392194, 392229], label: Z18, type: Korok Seed}
   - {frame: [392695, 392731], label: Z26, type: Korok Seed}
+  - {frame: [397691, 406124], label: Vah Ruta, type: Ruta, segments: [[399102, T1], [399739, T2], [402115, T3], [403009, T4], [403650, T5], [404061, To Blight], [404585, Blight], [406124, Leave]]}
   - {frame: [411730, 413130], label: Dagah Keek Shrine, type: Shrine, segments: [[412023, Enter], [412895, Main], [413130, Leave]]}
   - {frame: [414849, 414886], label: Z24, type: Korok Seed}
   - {frame: [415405, 415441], label: Z34, type: Korok Seed}
@@ -290,6 +293,7 @@ events:
   - {frame: [558626, 558660], label: E16, type: Korok Seed}
   - {frame: [559223, 559259], label: E17, type: Korok Seed}
   - {frame: [559885, 561346], label: Daqa Koh Shrine, type: Shrine, segments: [[560146, Enter], [561108, Main], [561346, Leave]]}
+  - {frame: [574567, 584465], label: Vah Rudania, type: Rudania, segments: [[576094, T1], [579705, T2], [581054, T3], [581651, T4], [582253, T5], [582495, To Blight], [582964, Blight], [584465, Leave]]}
   - {frame: [593043, 594777], label: Kayra Mah Shrine, type: Shrine, segments: [[593327, Enter], [594557, Main], [594777, Leave]]}
   - {frame: [595750, 595787], label: E20, type: Korok Seed}
   - {frame: [596583, 596620], label: E21, type: Korok Seed}
